--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,23 @@
-anyascii==0.3.2
-asgiref==3.8.1
-attrs==23.2.0
-beautifulsoup4==4.12.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-coloredlogs==15.0.1
-defusedxml==0.7.1
-Django==5.0.4
-django-filter==24.2
-django-modelcluster==6.3
-django-permissionedforms==0.1
-django-taggit==5.0.1
-django-treebeard==4.7.1
-djangorestframework==3.15.1
-draftjs-exporter==5.0.0
-et-xmlfile==1.1.0
-filetype==1.2.0
-flatbuffers==24.3.7
-humanfriendly==10.0
-idna==3.6
-imageio==2.34.0
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-l18n==2021.3
-laces==0.1.1
-lazy_loader==0.3
-llvmlite==0.42.0
-mpmath==1.3.0
-networkx==3.2.1
-numba==0.59.1
-numpy==1.26.4
-onnxruntime==1.17.1
-opencv-python-headless==4.9.0.80
-openpyxl==3.1.2
-packaging==24.0
-pillow==10.2.0
-pillow_heif==0.16.0
-platformdirs==4.2.0
-pooch==1.8.1
-protobuf==5.26.0
-PyMatting==1.1.12
-pypdf==4.2.0
+asttokens==2.4.1
+dateparser==1.2.0
+decorator==5.1.1
+exceptiongroup==1.2.1
+executing==2.0.1
+ipython==8.25.0
+jedi==0.19.1
+matplotlib-inline==0.1.7
+parso==0.8.4
+pexpect==4.9.0
+prompt_toolkit==3.0.45
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
 pytz==2024.1
-referencing==0.34.0
-rembg==2.0.56
-requests==2.31.0
-rpds-py==0.18.0
-scikit-image==0.22.0
-scipy==1.12.0
+regex==2024.5.15
 six==1.16.0
-soupsieve==2.5
-sqlparse==0.5.0
-sympy==1.12
-telepath==0.3.1
-tifffile==2024.2.12
-tqdm==4.66.2
-typing_extensions==4.11.0
-urllib3==2.2.1
-wagtail==6.1
-Willow==1.8.0
+stack-data==0.6.3
+traitlets==5.14.3
+typing_extensions==4.12.1
+tzlocal==5.2
+wcwidth==0.2.13
